--- a/orangeMartDev/appsettings.json
+++ b/orangeMartDev/appsettings.json
@@ -1,4 +1,8 @@
 ﻿{
+  "ConnectionStrings": {
+    "WorkConnection": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=orangeMart;Integrated Security=True",
+    "HomeConnection": "Data Source=PROGRAMMING\\SQLEXPRESS;Initial Catalog=orangeMart;Integrated Security=True"
+  },
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
