--- a/orangeMartDev/orangeMartDev.csproj
+++ b/orangeMartDev/orangeMartDev.csproj
@@ -7,9 +7,20 @@
   <ItemGroup>
     <Compile Remove="Migrations\20181202112752_init.cs" />
     <Compile Remove="Migrations\20181202112752_init.Designer.cs" />
+    <Compile Remove="Migrations\20181202130143_init.cs" />
+    <Compile Remove="Migrations\20181202130143_init.Designer.cs" />
+    <Compile Remove="Migrations\20181204093316_init2.cs" />
+    <Compile Remove="Migrations\20181204093316_init2.Designer.cs" />
+    <Compile Remove="Migrations\20181204094802_init3.cs" />
+    <Compile Remove="Migrations\20181204094802_init3.Designer.cs" />
+    <Compile Remove="Migrations\20181204124121_init4.cs" />
+    <Compile Remove="Migrations\20181204124121_init4.Designer.cs" />
+    <Compile Remove="Migrations\20181204124929_init5.cs" />
+    <Compile Remove="Migrations\20181204124929_init5.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Migrations\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
@@ -18,6 +29,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.1.4" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
   </ItemGroup>
 
